--- a/frontend/assets/css/header.css
+++ b/frontend/assets/css/header.css
@@ -1,11 +1,4 @@
-header {
-  border: 5px solid rgb(6, 89, 121);
-  font-family: 'Roboto', sans-serif;
-  height: 100vh;
-  position: relative;
-  z-index: 0;
-}
-#detailsContact {
+header .detailsContact {
   background: rgb(9, 9, 121);
   background: linear-gradient(
     90deg,
@@ -14,68 +7,81 @@ header {
     rgba(2, 0, 36, 1) 100%
   );
   color: white;
-  width: 95vw;
-  height: 8vh;
   margin: auto;
   display: flex;
 }
 
-#detailsContact div {
+header .detailsContact {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  width: 100%;
+  padding: 10px;
 }
-#detailsContact a {
+header .detailsContact a {
   margin: 10px;
   color: white;
   text-decoration: none;
-}
-#detailsContact .surveyBox {
-  width: 30%;
-}
-#detailsContact .contactInformation {
-  width: 40%;
-}
-#detailsContact .socialMediaIcon {
-  width: 30%;
-  gap: 5px;
 }
 
 .navbar {
   position: sticky;
   top: 0;
   border-radius: 15px;
-  margin: auto;
-  margin-top: 15px;
-  height: 15vh;
-  width: 95vw;
-  border: 2px solid rgb(146, 14, 14);
+  width: 100%;
+}
+.navbar .nav_left {
   display: flex;
+  justify-content: space-between;
+  background-color: #fff;
+  width: 90%;
+}
+.navbar .nav_right {
+  background: rgb(9, 9, 121);
+  background: linear-gradient(
+    90deg,
+    rgba(9, 9, 121, 1) 0%,
+    rgba(18, 198, 235, 1) 0%,
+    rgba(2, 0, 36, 1) 100%
+    );
+  width: 10%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.navbar .nav_right a {
+  display: block;
+  color: #fff;
 }
 .navbar #logo {
   height: 100%;
-  width: 20%;
+  width: 150px;
 }
 #logo img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 .navbar ul {
-  width: 80%;
   display: flex;
   align-items: center;
   gap: 20px;
+  padding: 0 20px;
 }
 .navbar ul li {
   list-style-type: none;
 }
-.navbar ul li a{
-  color: #073F63;
-  text-decoration: none;  
-  font-weight: 700;      
+.navbar ul li a {
+  color: #073f63;
+  text-decoration: none;
+  font-weight: 700;
 }
-.navbar ul li a:hover{
+.navbar ul li a:hover {
   cursor: pointer;
-
+}
+header .container-fluid,
+.navbar .container-fluid {
+  max-width: 1300px;
+  align-items: initial;
 }
