--- a/frontend/assets/css/header.css
+++ b/frontend/assets/css/header.css
@@ -29,12 +29,15 @@ header .detailsContact a {
   top: 0;
   border-radius: 15px;
   width: 100%;
+  padding: 0;
+  margin: 10px 0;
 }
 .navbar .nav_left {
   display: flex;
   justify-content: space-between;
   background-color: #fff;
   width: 90%;
+  height: 70px;
 }
 .navbar .nav_right {
   background: rgb(9, 9, 121);
@@ -45,7 +48,6 @@ header .detailsContact a {
     rgba(2, 0, 36, 1) 100%
     );
   width: 10%;
-  height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
