--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -29,11 +29,11 @@ a {
   text-decoration: none;
 }
 
-img {
+/* img {
   width: 100% !important;
   height: 100% !important;
   vertical-align: middle;
-}
+} */
 main{
   background-color: #fff;
 }
