--- a/frontend/assets/css/home.css
+++ b/frontend/assets/css/home.css
@@ -1,1 +1,69 @@
 @import url("./header.css");
+
+/* *********** Banner ************* */
+
+#homeBanner {
+  position: relative;
+  background-image: url("../Images/pic.svg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+#homeBanner > div{
+    width: 100%;
+}
+#homeBanner > img:nth-child(1){   
+    position: absolute;
+    object-fit: cover;
+    object-position: left top;
+    right: 0;
+    width: 50%; 
+    height: 100%;
+}
+.bannerContent > div:nth-child(1){
+    margin-top: 20px;
+    padding: 10px;
+    width: 100%; 
+    background-color: #292929;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+} 
+.bannerContent > div:nth-child(1) h1{
+    font-family: 'Kreon', serif;
+    color: white;
+    margin-bottom: 20px ;
+}
+.bannerContent > div:nth-child(1) h4{
+    color: #1973ab;
+    font-size: 1rem;
+}
+.bannerContent > div:nth-child(1) h2{
+    color: white;
+    font-size: 1.3rem;
+}
+.bannerContent > div:nth-child(2) ul{
+    display: flex;
+    gap: 5px; 
+    flex-direction: column; 
+    height: 100%;
+    justify-content: center;
+}
+.bannerContent > div:nth-child(2) ul li i{
+    margin: 10px; 
+}
+.bannerContent > div:nth-child(2) ul li:nth-child(1){
+    margin-left: 100px; 
+}
+.bannerContent > div:nth-child(2) ul li:nth-child(2){
+    margin-left: 80px; 
+}
+.bannerContent > div:nth-child(2) ul li:nth-child(3){
+    margin-left: 60px; 
+}
+.bannerContent > div:nth-child(2) ul li:nth-child(4){
+    margin-left: 40px; 
+}
+.bannerContent > div:nth-child(2) ul li:nth-child(5){
+    margin-left: 20px; 
+}
