--- a/frontend/assets/css/home.css
+++ b/frontend/assets/css/home.css
@@ -67,3 +67,55 @@
 .bannerContent > div:nth-child(2) ul li:nth-child(5){
     margin-left: 20px; 
 }
+
+/* *********** Quote ************* */
+
+.quote{
+    margin: auto;
+    margin-top: 20px;
+    border: 2px solid transparent;
+    border-top-color: blue;
+    width: 95%;
+}
+.quote > div:nth-child(1){    
+    display: flex;   
+}
+.quoteNote{
+    padding: 20px;
+    width: 30%;
+}
+.quoteNote > h3{
+    font-family: 'Kreon', serif;
+}
+.quoteForm{
+    padding: 20px;
+    width: 70%;
+}
+.quoteForm form input{
+    padding: 5px;
+} 
+.quoteForm form input:focus{
+    color: red;
+    border: 2px solid red;
+} 
+.quoteForm form{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px; 
+
+}
+.quoteForm .btn{
+    height: 30px; 
+    width: 20%;
+    font-family: 'Kreon', serif;
+    align-self: flex-end;
+    color: white;
+    text-align: end;
+    display: inline-flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-image: url("https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63b7fd84e4a16197ede760ff_DBM%20Button.svg");
+    background-repeat: no-repeat;
+    background-size: cover;    
+}
