--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -38,6 +38,14 @@ main{
   background-color: #fff;
 }
 
+.container{
+  max-width: 1250px;
+}
+
+section{
+  padding: 50px 0;
+}
+
 /* *********** Template ************* */
 
 /* *********** reused css ************* */
