--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -59,6 +59,7 @@ p{
 .innerBanner{
   min-height: 300px;
   background: url("../Images/aboutBanner.jpg") no-repeat;
+  background-size: cover;
   margin: auto;
   display: flex;
   align-items: center;
