--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -40,6 +40,12 @@ main{
   background-color: #fff;
 }
 
+img{
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
 .container{
   max-width: 1250px;
 }
