--- a/frontend/assets/css/header.css
+++ b/frontend/assets/css/header.css
@@ -51,14 +51,20 @@ header .detailsContact a {
     );
     width: 15%;
     border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  }
+  .navbar .nav_right a {
+    display: block;
+    color: #fff;
+    width: 100%;
+    height: 100%;
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.navbar .nav_right a {
-  display: block;
-  color: #fff;
-}
+    .navbar .nav_right a i {
+      font-size: 30px;
+    }
 .navbar #logo {
   height: 100%;
   width: 150px;
