--- a/frontend/assets/css/home.css
+++ b/frontend/assets/css/home.css
@@ -141,6 +141,60 @@
     background-size: cover;  
 }
 
+/* *********** About Us ************* */
+
+
+#aboutUs{
+    display: flex;
+    padding: 40px;
+}
+
+#aboutUs > div:nth-child(1) {
+    /* padding: 0px 40px; */
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#aboutUs > div:nth-child(1) > h2:nth-child(1){
+    color: #074165;
+    font-size: 1.5rem;
+    font-weight: 700;
+    font-family: Roboto, sans-serif;
+}
+#aboutUs > div:nth-child(1) > h2:nth-child(2){
+    padding: 20px 0px;
+    line-height: 1.6em;
+    font-weight: bold;
+    font-size: 2rem;
+    color: #182937;
+    width: 85%;
+    font-family: 'Kreon', serif;
+    font-size: 2.5rem;
+}
+#aboutUs > div:nth-child(1) > p{
+    padding-right: 15px;
+    flex-grow: 3;
+    width: 90%;
+    color: #5E5E5E;
+}
+
+#aboutUs > div:nth-child(2) {
+    width: 40%;
+    /* box-shadow: 1px 1px 10px 0px rgb(97, 102, 97,.8); */
+    box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.1);
+    padding: 40px 0px;
+}
+
+#aboutUs > div:nth-child(2) img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+
+}
+
 
 /* .quoteForm form input{
     padding: 5px;
