--- a/frontend/assets/css/home.css
+++ b/frontend/assets/css/home.css
@@ -144,12 +144,14 @@
 /* *********** About Us ************* */
 
 
-#aboutUs{
+#aboutUs .rowww{
     display: flex;
-    padding: 40px;
+    /* padding: 40px; */
 }
 
-#aboutUs > div:nth-child(1) {
+
+
+#aboutUs .rowww > div:nth-child(1) {
     /* padding: 0px 40px; */
     width: 60%;
     display: flex;
@@ -157,13 +159,13 @@
     justify-content: center;
 }
 
-#aboutUs > div:nth-child(1) > h2:nth-child(1){
+#aboutUs .rowww > div:nth-child(1) > h2:nth-child(1){
     color: #074165;
     font-size: 1.5rem;
     font-weight: 700;
     font-family: Roboto, sans-serif;
 }
-#aboutUs > div:nth-child(1) > h2:nth-child(2){
+#aboutUs .rowww > div:nth-child(1) > h2:nth-child(2){
     padding: 20px 0px;
     line-height: 1.6em;
     font-weight: bold;
@@ -173,54 +175,24 @@
     font-family: 'Kreon', serif;
     font-size: 2.5rem;
 }
-#aboutUs > div:nth-child(1) > p{
+#aboutUs .rowww > div:nth-child(1) > p{
     padding-right: 15px;
     flex-grow: 3;
     width: 90%;
     color: #5E5E5E;
 }
 
-#aboutUs > div:nth-child(2) {
+#aboutUs .rowww > div:nth-child(2) {
     width: 40%;
     /* box-shadow: 1px 1px 10px 0px rgb(97, 102, 97,.8); */
     box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.1);
     padding: 40px 0px;
 }
 
-#aboutUs > div:nth-child(2) img{
+#aboutUs .rowww > div:nth-child(2) img{
     height: 100%;
     width: 100%;
     object-fit: cover;
     object-position: center;
 
 }
-
-
-/* .quoteForm form input{
-    padding: 5px;
-} 
-.quoteForm form input:focus{
-    color: red;
-    border: 2px solid red;
-} 
-.quoteForm form{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-
-    gap: 15px;
-}
-.quoteForm .btn{
-    height: 30px; 
-    width: 20%;
-    font-family: 'Kreon', serif;
-    align-self: flex-end;
-    color: white;
-    text-align: end;
-    display: inline-flex;
-    justify-content: flex-end;
-    align-items: center;
-    background-image: url("https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63b7fd84e4a16197ede760ff_DBM%20Button.svg");
-    background-repeat: no-repeat;
-    background-size: cover;    
-} */
