Service work done but img and  hover not work

--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   font-family: "Poppins", sans-serif;
   background-color: #d9d9d9;
 }
