--- a/frontend/assets/css/home.css
+++ b/frontend/assets/css/home.css
@@ -161,7 +161,7 @@
     color: #074165;
     font-size: 1.5rem;
     font-weight: 700;
-    font-family: Roboto, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 #aboutUs > div:nth-child(1) > h2:nth-child(2){
     padding: 20px 0px;
@@ -182,7 +182,6 @@
 
 #aboutUs > div:nth-child(2) {
     width: 40%;
-    /* box-shadow: 1px 1px 10px 0px rgb(97, 102, 97,.8); */
     box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.1);
     padding: 40px 0px;
 }
@@ -194,6 +193,95 @@
     object-position: center;
 
 }
+
+/* *********** Our Service ************* */
+#ourService{
+    color: white;
+    /* border: 1px solid black; */
+    width: 100%;
+    position: relative;
+    z-index: 5;
+}
+#ourService > img {
+    height: 100%;
+    width: 100vw;
+    opacity: 0.5;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -3;
+}
+#ourService::before{
+    content: "";
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(225deg, #09587C 17%, #182937 17%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.8;
+    z-index: -1;
+
+}
+
+#ourService > h2:nth-child(2){
+    text-align: center;
+    font-size: 1.5rem;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+
+}
+#ourService > h2:nth-child(3){
+    text-align: center;
+    font-family: 'Kreon', serif;
+    font-size: 2.25rem;
+}
+.serviceBox{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    flex-flow: row wrap;
+
+}
+.serviceBox > div{
+    padding: 0px 50px;
+    max-width: 400px ;
+    min-height: 300px;
+    display: flex;
+    flex-direction: column ;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 10px;
+    padding: 20px;
+}
+.serviceBox > div:hover{
+    background-color: #11BEE3;
+    transition: background-color 0.5s linear;
+}
+
+.serviceBox > div > h2{
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+.serviceBox > div > i{
+    margin: 20px 0px;
+    color: #040E32;
+}
+.serviceBox > div > a{
+    color: #040E32;
+    font-weight:600;
+}
+
+/* #ourService > img{
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+} */
+
 
 
 /* .quoteForm form input{
