--- a/frontend/assets/css/home.css
+++ b/frontend/assets/css/home.css
@@ -10,18 +10,18 @@
 }
 
 #homeBanner .container::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    background-image: url("../Images/pic.svg");
-    background-repeat: no-repeat;
-    background-size: auto;
-    background-position: left;
-    z-index: -1;
-  }
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background-image: url("../Images/pic.svg");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: left;
+  z-index: -1;
+}
 
 #homeBanner .container > img:nth-child(1) {
   position: absolute;
@@ -218,7 +218,6 @@
 /* *********** Our Service ************* */
 #ourService {
   color: white;
-  /* border: 1px solid black; */
   width: 100%;
   position: relative;
   z-index: 5;
@@ -300,7 +299,6 @@
 }
 #ourService .serviceBox .box > a {
   color: #fff;
-  /* color: #040E32; */
   font-weight: 600;
 }
 
@@ -311,4 +309,300 @@
 #ourService .serviceBox .box:hover a {
   color: #040e32;
   transition: 0.3s all;
+}
+
+/* *********** Choose Us ************* */
+.chooseUs {
+  padding: 0;
+  margin: 50px 0px;
+  height: 120vh;
+  width: 100%;
+  display: flex;
+}
+.chooseUs > div {
+  width: 50%;
+}
+.chooseUs > div:nth-child(1) {
+  padding: 0px 20px;
+  height: 100%;
+  width: 60%;
+}
+.chooseUs > div:nth-child(1) > img {
+  height: 100%;
+  width: 100%;
+}
+
+.chooseUs > div:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+.chooseUs > div:nth-child(2) > .chooseUsContent {
+  position: relative;
+  left: -120px;
+  z-index: 1;
+  background-color: white;
+  padding: 20px 60px;
+  margin-top: 50px;
+  display: flex;
+  box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+  height: 60%;
+}
+.chooseUs > div:nth-child(2) > .chooseUsContent > div:nth-child(1) {
+  width: 400px;
+}
+.chooseUs
+  > div:nth-child(2)
+  > .chooseUsContent
+  > div:nth-child(1)
+  > h2:nth-child(1) {
+  color: #074165;
+  font-size: 1.7rem;
+  font-weight: 600;
+}
+.chooseUs
+  > div:nth-child(2)
+  > .chooseUsContent
+  > div:nth-child(1)
+  > h2:nth-child(2) {
+  font-family: "Kreon", serif;
+  font-weight: 600;
+  font-size: 2.3rem;
+}
+.chooseUs .chooseUsBtn > button {
+  width: 150px;
+  border: none;
+  margin-top: 10px;
+  padding: 10px 20px;
+  color: white;
+  background-color: #182937;
+}
+.chooseUs .chooseUsBtn > button:hover {
+  background-color: #0e98bd;
+  transition: all 0.4s ease;
+}
+.chooseUs .chooseUsBtn > button:nth-child(1) {
+  margin-right: 5px;
+}
+.chooseUs ul {
+  color: #5e5e5e;
+}
+#experienceCounter {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 30%;
+}
+#experienceCounter > div h6 {
+  color: #5e5e5e;
+}
+#experienceCounter > div > p {
+  font-weight: 700;
+  font-size: 2rem;
+  text-align: center;
+}
+#experienceCounter > div sup {
+  color: #0e98bd;
+}
+
+/* *********** Footer ************* */
+footer {
+  position: relative;
+  background-color: #1a1a1a;
+}
+/* map  */
+.map {
+  width: 100%;
+  height: 100vh;
+}
+.map img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+footer .formDetail {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+footer .formDetail > form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: white;
+  width: 40vw;
+  padding: 30px 0px;
+  margin: auto;
+  margin-right: 30px;
+  min-height: 120vh;
+}
+footer .formDetail form > label {
+  width: 90%;
+  min-height: 70px;
+  margin: 20px auto;
+}
+footer .formDetail form > label > h5 {
+  font-size: 1rem;
+  font-weight: 600;
+}
+footer .formDetail form > label > input,
+textarea {
+  width: 100%;
+  padding: 15px;
+  border: 1px solid #9e9797;
+  border-radius: 3px;
+}
+footer .formDetail form > label > textarea {
+  padding: 10px;
+}
+footer .formDetail form > div {
+  width: 90%;
+  margin: auto;
+  margin-bottom: 30px;
+}
+footer .formDetail form > div > h4 {
+  font-weight: 700;
+}
+footer .formDetail form > div > p {
+  width: 70%;
+}
+footer .formDetail form > .btn {
+  margin-right: 30px;
+  width: 40%;
+  margin-left: auto;
+  font-family: "Kreon", serif;
+  text-align: end;
+  color: white;
+  background-image: url("https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63b7fd84e4a16197ede760ff_DBM%20Button.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.policyTerms {
+  width: 40vw;
+  bottom: 0;
+  color: #9d9d9d;
+}
+.policyTerms > p {
+  padding: 15px 0;
+  font-family: "Khula", sans-serif;
+  font-weight: 600;
+  color: #aeaeae;
+  font-size: 1rem;
+}
+.policyTerms > div {
+  height: 10vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.policyTerms > div > a {
+  color: white;
+  font-weight: 700;
+}
+.policyTerms > div > a > i {
+  color: #0fa7cc;
+  padding-left: 5px;
+}
+.policyTerms > div > .socialMedia > i {
+  margin: 5px;
+}
+.londonBranch {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 0 30px;
+  min-height: 100vh;
+  font-family: "Khula", sans-serif;
+  color: white;
+  background-color: #1a1a1a;
+}
+.londonBranch > h3{
+  font-size: 2rem;
+  font-weight: 900;
+}
+.londonBranch > div{
+  width: 50%;
+}
+.londonBranch h4{
+  font-weight: 600;
+}
+.londonBranch > h3 > span{
+  display: inline-flex;
+  flex-direction: column;
+}
+.londonBranch > h3 > span::after{
+  content: "";
+  margin-top: 5px;
+  height: 10px;
+  background-color: #fff;
+}
+
+.londonBranch > .info > a {
+  color: white;
+}
+
+.londonBranch > .info > a:hover {
+  text-decoration: underline;
+}
+
+.londonBranch > .nationWide {
+  width: 100%;
+}
+.footerNav{
+  padding: 50px 0;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.footerNav > ul{
+  display: flex;
+  justify-content: space-evenly;
+  width: 70%;
+  margin: 0 auto;
+}
+.footerNav > ul a{
+  color: #767676; 
+}
+.footerNav > ul a:hover{
+  color: white;
+}
+.footerNav > .copyright{
+  margin: 0 auto; 
+  position: relative;
+  border-top: 2px solid #000; 
+  text-align: center;
+  /* padding: 15px; */
+  height: 30%; 
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  width: 70%;
+  color: #CCDFC4;
+}
+.footerNav > .copyright::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #353838;     
+  height: 1px;
+  color: red; 
+  width: 100%; 
+}
+
+footer .slider .item{
+  border: 1px solid red;
+  height: 200px;
+}
+
+footer .slider .item img{
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: fill;
 }
