--- a/frontend/assets/css/footer.css
+++ b/frontend/assets/css/footer.css
@@ -1,24 +1,27 @@
 footer {
-    position: relative;
-    background-color: #1a1a1a;
-  }
-  /* map  */
+  position: relative;
+  background-color: #1a1a1a;
+}
+
+/* map  */
 footer .map {
-    width: 100%;
-    height: 100vh;
-  }
+  width: 100%;
+  height: 100vh;
+}
+
 footer .map img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 footer .formDetail {
   position: absolute;
   top: 0;
   right: 0;
 }
-footer .formDetail > form {
+
+footer .formDetail>form {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -27,39 +30,47 @@ footer .formDetail > form {
   padding: 30px 0px;
   margin: auto;
   margin-right: 30px;
-  min-height: 120vh;
+  /* min-height: 120vh; */
 }
-footer .formDetail form > label {
+
+footer .formDetail form>label {
   width: 90%;
   min-height: 70px;
   margin: 20px auto;
 }
-footer .formDetail form > label > h5 {
+
+footer .formDetail form>label>h5 {
   font-size: 1rem;
   font-weight: 600;
 }
-footer .formDetail form > label > input,
+
+footer .formDetail form>label>input,
 footer textarea {
   width: 100%;
   padding: 15px;
   border: 1px solid #9e9797;
   border-radius: 3px;
 }
-footer .formDetail form > label > textarea {
+
+footer .formDetail form>label>textarea {
   padding: 10px;
 }
-footer .formDetail form > div {
+
+footer .formDetail form>div {
   width: 90%;
   margin: auto;
   margin-bottom: 30px;
 }
-footer .formDetail form > div > h4 {
+
+footer .formDetail form>div>h4 {
   font-weight: 700;
 }
-footer .formDetail form > div > p {
+
+footer .formDetail form>div>p {
   width: 70%;
 }
-footer .formDetail form > .btn {
+
+footer .formDetail form>.btn {
   margin-right: 30px;
   width: 40%;
   margin-left: auto;
@@ -70,33 +81,39 @@ footer .formDetail form > .btn {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 footer .policyTerms {
   width: 40vw;
   bottom: 0;
   color: #9d9d9d;
 }
-footer .policyTerms > p {
+
+footer .policyTerms>p {
   padding: 15px 0;
   font-family: "Khula", sans-serif;
   font-weight: 600;
   color: #aeaeae;
   font-size: 1rem;
 }
-footer .policyTerms > div {
+
+footer .policyTerms>div {
   height: 10vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-footer .policyTerms > div > a {
+
+footer .policyTerms>div>a {
   color: white;
   font-weight: 700;
 }
-footer .policyTerms > div > a > i {
+
+footer .policyTerms>div>a>i {
   color: #0fa7cc;
   padding-left: 5px;
 }
-footer .policyTerms > div > .socialMedia > a {
+
+footer .policyTerms>div>.socialMedia>a {
   color: #aeaeae;
   margin: 5px;
 }
@@ -112,38 +129,44 @@ footer .londonBranch {
   color: white;
   background-color: #1a1a1a;
 }
-footer .londonBranch > h3 {
+
+footer .londonBranch>h3 {
   font-size: 2rem;
   font-weight: 900;
 }
-footer .londonBranch > div {
+
+footer .londonBranch>div {
   width: 50%;
 }
+
 footer .londonBranch h4 {
   font-weight: 600;
 }
-footer .londonBranch > h3 > span {
+
+footer .londonBranch>h3>span {
   display: inline-flex;
   flex-direction: column;
 }
-footer .londonBranch > h3 > span::after {
+
+footer .londonBranch>h3>span::after {
   content: "";
   margin-top: 5px;
   height: 10px;
   background-color: #fff;
 }
 
-footer .londonBranch > .info > a {
+footer .londonBranch>.info>a {
   color: white;
 }
 
-footer .londonBranch > .info > a:hover {
+footer .londonBranch>.info>a:hover {
   text-decoration: underline;
 }
 
-footer .londonBranch > .nationWide {
+footer .londonBranch>.nationWide {
   width: 100%;
 }
+
 footer .footerNav {
   padding: 50px 0;
   height: 50vh;
@@ -151,19 +174,23 @@ footer .footerNav {
   flex-direction: column;
   justify-content: space-between;
 }
-footer .footerNav > ul {
+
+footer .footerNav>ul {
   display: flex;
   justify-content: space-evenly;
   width: 70%;
   margin: 0 auto;
 }
-footer .footerNav > ul a {
+
+footer .footerNav>ul a {
   color: #767676;
 }
-footer .footerNav > ul a:hover {
+
+footer .footerNav>ul a:hover {
   color: white;
 }
-footer .footerNav > .copyright {
+
+footer .footerNav>.copyright {
   margin: 0 auto;
   position: relative;
   border-top: 2px solid #000;
@@ -176,7 +203,8 @@ footer .footerNav > .copyright {
   width: 70%;
   color: #ccdfc4;
 }
-footer .footerNav > .copyright::before {
+
+footer .footerNav>.copyright::before {
   content: "";
   position: absolute;
   top: 0;
@@ -196,4 +224,70 @@ footer .slider .item img {
   width: 100% !important;
   height: 100% !important;
   object-fit: fill;
+}
+
+@media only screen and (max-width: 762px) {
+  footer .formDetail {
+    position: static; /* or any other value to override */
+    /* other styles for smaller screens */
+}
+.footer form{
+  width: 100% !important;
+}
+footer .policyTerms{
+  width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+footer .formDetail > form {
+  width: 100%; /* or any other value to override */
+  /* other styles for smaller screens */
+}
+footer .londonBranch {
+  width: 100%; /* or any other value to override */
+  /* other styles for smaller screens */
+}
+footer .slider .item img {
+  width: 100%; /* or any other value to override */
+  height: auto; /* to maintain aspect ratio */
+  object-fit: cover; /* or any other value to override */
+  /* other styles for smaller screens */
+}
+footer .map img {
+  width: 100%; /* or any other value to override */
+ 
+  object-fit: cover; /* or any other value to override */
+  /* other styles for smaller screens */
+}
+
+}
+
+@media only screen and (max-width: 820px) {
+  footer .map img{
+    height: 720px;
+  }
+  .map{
+    height: 720px !important;
+  }
+  footer .londonBranch{
+    min-height: 40vh;
+  }
+}
+
+@media only screen and (max-width: 950px) {
+  footer .londonBranch{
+    min-height: 170vh;
+  }
+}
+
+@media only screen and (max-width: 430px) {
+  footer .londonBranch{
+    min-height:80vh;
+  }
+}
+
+@media only screen and (max-width: 820px) {
+  footer .londonBranch{
+    min-height:80vh;
+  }
 }
