--- a/frontend/assets/css/home.css
+++ b/frontend/assets/css/home.css
@@ -23,7 +23,7 @@
   z-index: -1;
 }
 
-#homeBanner .container > img:nth-child(1) {
+#homeBanner .container>img:nth-child(1) {
   position: absolute;
   object-fit: cover;
   object-position: left top;
@@ -33,7 +33,8 @@
   height: 100%;
   z-index: 1;
 }
-.bannerContent > div:nth-child(1) {
+
+.bannerContent>div:nth-child(1) {
   margin-top: 20px;
   padding: 10px;
   width: 100%;
@@ -43,20 +44,24 @@
   flex-direction: column;
   justify-content: center;
 }
-.bannerContent > div:nth-child(1) h1 {
+
+.bannerContent>div:nth-child(1) h1 {
   font-family: "Kreon", serif;
   color: white;
   margin-bottom: 20px;
 }
-.bannerContent > div:nth-child(1) h4 {
+
+.bannerContent>div:nth-child(1) h4 {
   color: #1973ab;
   font-size: 1rem;
 }
-.bannerContent > div:nth-child(1) h2 {
+
+.bannerContent>div:nth-child(1) h2 {
   color: white;
   font-size: 1.3rem;
 }
-.bannerContent > div:nth-child(2) ul {
+
+.bannerContent>div:nth-child(2) ul {
   display: flex;
   gap: 5px;
   flex-direction: column;
@@ -66,26 +71,34 @@
   padding: 50px 0;
   font-size: 20px;
 }
-.bannerContent > div:nth-child(2) ul li i {
+
+.bannerContent>div:nth-child(2) ul li i {
   margin: 10px 20px 10px 10px;
   font-size: 20px;
 }
-.bannerContent > div:nth-child(2) ul li:nth-child(1) {
+
+.bannerContent>div:nth-child(2) ul li:nth-child(1) {
   margin-left: 130px;
 }
-.bannerContent > div:nth-child(2) ul li:nth-child(2) {
+
+.bannerContent>div:nth-child(2) ul li:nth-child(2) {
   margin-left: 115px;
 }
-.bannerContent > div:nth-child(2) ul li:nth-child(3) {
+
+.bannerContent>div:nth-child(2) ul li:nth-child(3) {
   margin-left: 95px;
 }
-.bannerContent > div:nth-child(2) ul li:nth-child(4) {
+
+.bannerContent>div:nth-child(2) ul li:nth-child(4) {
   margin-left: 80px;
+
 }
-.bannerContent > div:nth-child(2) ul li:nth-child(5) {
+
+.bannerContent>div:nth-child(2) ul li:nth-child(5) {
   margin-left: 60px;
 }
-.bannerContent > div:nth-child(2) ul li:nth-child(6) {
+
+.bannerContent>div:nth-child(2) ul li:nth-child(6) {
   margin-left: 40px;
 }
 
@@ -94,6 +107,7 @@
 .quote {
   margin-top: 20px;
 }
+
 .quote .container {
   border: 2px solid transparent;
   border-top-color: blue;
@@ -102,13 +116,16 @@
   border-radius: 3px;
   display: flex;
 }
+
 .quoteNote {
   padding: 20px;
   width: 30%;
 }
-.quoteNote > h3 {
+
+.quoteNote>h3 {
   font-family: "Kreon", serif;
 }
+
 .quoteForm {
   padding: 20px;
   width: 70%;
@@ -118,13 +135,16 @@
   display: flex;
   justify-content: space-between;
 }
+
 .quoteForm form .group-form {
   width: 30%;
 }
+
 .quoteForm form .group-form .first,
 .quoteForm form .group-form .second {
   margin: 10px 0;
 }
+
 .quoteForm form .group-form .first {
   margin-top: 0 !important;
 }
@@ -132,9 +152,11 @@
 .quoteForm form .group-form .first label {
   margin-bottom: 10px;
 }
+
 .quoteForm form .group-form .second label {
   margin: 10px 0;
 }
+
 .quoteForm form .group-form label {
   font-weight: 600;
   font-size: 14px;
@@ -146,6 +168,7 @@
   border: 1px solid #ddd;
   font-size: 14px;
 }
+
 .quoteForm form .group-form input:focus {
   outline: none;
   border: 1px solid blue;
@@ -171,7 +194,7 @@
   /* padding: 40px; */
 }
 
-#aboutUs .rowww > div:nth-child(1) {
+#aboutUs .rowww>div:nth-child(1) {
   /* padding: 0px 40px; */
   width: 60%;
   display: flex;
@@ -179,13 +202,14 @@
   justify-content: center;
 }
 
-#aboutUs .rowww > div:nth-child(1) > h2:nth-child(1) {
+#aboutUs .rowww>div:nth-child(1)>h2:nth-child(1) {
   color: #074165;
   font-size: 1.5rem;
   font-weight: 700;
   font-family: "Roboto", sans-serif;
 }
-#aboutUs .rowww > div:nth-child(1) > h2:nth-child(2) {
+
+#aboutUs .rowww>div:nth-child(1)>h2:nth-child(2) {
   padding: 20px 0px;
   line-height: 1.6em;
   font-weight: bold;
@@ -195,20 +219,21 @@
   font-family: "Kreon", serif;
   font-size: 2.5rem;
 }
-#aboutUs .rowww > div:nth-child(1) > p {
+
+#aboutUs .rowww>div:nth-child(1)>p {
   padding-right: 15px;
   flex-grow: 3;
   width: 90%;
   color: #5e5e5e;
 }
 
-#aboutUs .rowww > div:nth-child(2) {
+#aboutUs .rowww>div:nth-child(2) {
   width: 40%;
   box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.1);
   padding: 40px 0px;
 }
 
-#aboutUs .rowww > div:nth-child(2) img {
+#aboutUs .rowww>div:nth-child(2) img {
   height: 100%;
   width: 100%;
   object-fit: cover;
@@ -225,7 +250,8 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-#ourService > img {
+
+#ourService>img {
   height: 100%;
   width: 100vw;
   opacity: 0.5;
@@ -234,6 +260,7 @@
   left: 0;
   z-index: -3;
 }
+
 #ourService::before {
   content: "";
   height: 100%;
@@ -252,14 +279,17 @@
   font-family: "Roboto", sans-serif;
   font-weight: 900;
 }
+
 #ourService h3 {
   text-align: center;
   font-family: "Kreon", serif;
   font-size: 2.25rem;
 }
+
 #ourService .serviceBox {
   width: 100%;
 }
+
 #ourService .serviceBox .box {
   padding: 20px 50px;
   text-align: center;
@@ -273,6 +303,7 @@
   z-index: 1;
   overflow: hidden;
 }
+
 #ourService .serviceBox .box::after {
   content: "";
   position: absolute;
@@ -284,20 +315,23 @@
   z-index: -1;
   transition: 0.3s all;
 }
+
 #ourService .serviceBox .box:hover::after {
   bottom: 0;
   transition: 0.3s all;
 }
 
-#ourService .serviceBox .box > h2 {
+#ourService .serviceBox .box>h2 {
   font-size: 1.5rem;
   font-weight: 700;
 }
-#ourService .serviceBox .box > i {
+
+#ourService .serviceBox .box>i {
   margin: 20px 0px;
   color: #fff;
 }
-#ourService .serviceBox .box > a {
+
+#ourService .serviceBox .box>a {
   color: #fff;
   font-weight: 600;
 }
@@ -306,6 +340,7 @@
   color: #040e32;
   transition: 0.3s all;
 }
+
 #ourService .serviceBox .box:hover a {
   color: #040e32;
   transition: 0.3s all;
@@ -315,29 +350,33 @@
 .chooseUs {
   padding: 0;
   margin: 50px 0px;
-  height: 120vh;
+  /* height: 120vh; */
   width: 100%;
   display: flex;
 }
-.chooseUs > div {
+
+.chooseUs>div {
   width: 50%;
 }
-.chooseUs > div:nth-child(1) {
+
+.chooseUs>div:nth-child(1) {
   padding: 0px 20px;
   height: 100%;
   width: 60%;
 }
-.chooseUs > div:nth-child(1) > img {
+
+.chooseUs>div:nth-child(1)>img {
   height: 100%;
   width: 100%;
 }
 
-.chooseUs > div:nth-child(2) {
+.chooseUs>div:nth-child(2) {
   display: flex;
   flex-direction: column;
   width: 40%;
 }
-.chooseUs > div:nth-child(2) > .chooseUsContent {
+
+.chooseUs>div:nth-child(2)>.chooseUsContent {
   position: relative;
   left: -120px;
   z-index: 1;
@@ -351,28 +390,24 @@
   width: 100%;
   height: 60%;
 }
-.chooseUs > div:nth-child(2) > .chooseUsContent > div:nth-child(1) {
+
+.chooseUs>div:nth-child(2)>.chooseUsContent>div:nth-child(1) {
   width: 400px;
 }
-.chooseUs
-  > div:nth-child(2)
-  > .chooseUsContent
-  > div:nth-child(1)
-  > h2:nth-child(1) {
+
+.chooseUs>div:nth-child(2)>.chooseUsContent>div:nth-child(1)>h2:nth-child(1) {
   color: #074165;
   font-size: 1.7rem;
   font-weight: 600;
 }
-.chooseUs
-  > div:nth-child(2)
-  > .chooseUsContent
-  > div:nth-child(1)
-  > h2:nth-child(2) {
+
+.chooseUs>div:nth-child(2)>.chooseUsContent>div:nth-child(1)>h2:nth-child(2) {
   font-family: "Kreon", serif;
   font-weight: 600;
   font-size: 2.3rem;
 }
-.chooseUs .chooseUsBtn > button {
+
+.chooseUs .chooseUsBtn>button {
   width: 150px;
   border: none;
   margin-top: 10px;
@@ -380,20 +415,24 @@
   color: white;
   background-color: #182937;
 }
-.chooseUs .chooseUsBtn > button:hover {
+
+.chooseUs .chooseUsBtn>button:hover {
   background-color: #0e98bd;
   transition: all 0.4s ease;
 }
-.chooseUs .chooseUsBtn > button:nth-child(1) {
+
+.chooseUs .chooseUsBtn>button:nth-child(1) {
   margin-right: 5px;
 }
+
 .chooseUs ul {
   color: #5e5e5e;
 }
 
-.chooseUs ul li{
+.chooseUs ul li {
   margin: 10px 0;
 }
+
 #experienceCounter {
   width: 100%;
   display: flex;
@@ -401,15 +440,18 @@
   align-items: center;
   height: 30%;
 }
-#experienceCounter > div h6 {
+
+#experienceCounter>div h6 {
   color: #5e5e5e;
 }
-#experienceCounter > div > p {
+
+#experienceCounter>div>p {
   font-weight: 700;
   font-size: 2rem;
   text-align: center;
 }
-#experienceCounter > div sup {
+
+#experienceCounter>div sup {
   color: #0e98bd;
 }
 
@@ -418,14 +460,285 @@ footer {
   position: relative;
   background-color: #1a1a1a;
 }
+
 /* map  */
 .map {
   width: 100%;
   height: 100vh;
 }
+
 .map img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
+@media only screen and (max-width: 800px) {
+  .chooseUs>div:nth-child(2)>.chooseUsContent>div:nth-child(1)>h2:nth-child(1) {
+    font-size: 1.2rem;
+  }
+
+  .chooseUs>div:nth-child(2)>.chooseUsContent>div:nth-child(1)>h2:nth-child(2) {
+    font-size: 1.8rem;
+  }
+
+  .chooseUs>div:nth-child(2)>.chooseUsContent {
+    height: 69%;
+  }
+
+  .chooseUsBtn {
+    display: flex !important;
+  }
+
+  .owl-carousel.owl-drag .owl-item{
+    width: 200px !important;
+  }
+
+  footer .slider .item img{
+    object-fit: contain !important;
+  }
+}
+
+@media only screen and (max-width: 762px) {
+  #aboutUs .rowww {
+    display: flex !important;
+    flex-direction: column !important;
+
+  }
+
+  .about_us {
+    padding-left: 69px;
+  }
+
+  #aboutUs .rowww>div:nth-child(1) {
+    width: 100%;
+    padding: 0px 10px;
+  }
+
+  #aboutUs .rowww>div:nth-child(2) {
+    width: 98%;
+    margin: auto;
+  }
+
+  .chooseUs {
+    flex-direction: column;
+  }
+
+  .chooseUs>div:nth-child(1) {
+    width: 100%;
+  }
+
+  .chooseUs>div:nth-child(2)>.chooseUsContent {
+    left: 0px;
+  }
+
+  .chooseUs>div:nth-child(2) {
+    width: 100%;
+  }
+
+  #aboutUs .rowww>div:nth-child(1)>p {
+    width: 100%;
+  }
+
+  #aboutUs .rowww>div:nth-child(1)>h2:nth-child(2) {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 427px) {
+  .chooseUs>div:nth-child(2)>.chooseUsContent>div:nth-child(1)>h2:nth-child(2) {
+    font-size: 2.0rem;
+  }
+  #experienceCounter{
+    margin-top: 25px;
+  }
+
+}
+
+@media only screen and (max-width: 383px) {
+  .chooseUs>div:nth-child(2)>.chooseUsContent>div:nth-child(1)>h2:nth-child(2) {
+    font-size: 1.5rem;
+  }
+}
+
+
+@media only screen and (max-width: 299px) {
+  .chooseUs>div:nth-child(2)>.chooseUsContent>div:nth-child(1)>h2:nth-child(2) {
+    font-size: 1.3rem;
+  }
+}
+
+
+@media only screen and (max-width: 608px) {
+  .quote .main_quote_form {
+
+    flex-direction: column;
+  }
+
+  .quoteNote {
+    width: 100%;
+    text-align: center;
+  }
+
+  .quoteForm {
+    width: 100%;
+  }
+
+  .quoteForm form {
+    flex-direction: column;
+    width: 100%;
+    /* Set the width to 100% on smaller screens */
+  }
+
+  .quoteForm form .group-form {
+    width: 100%;
+  }
+}
+
+.menu-icon {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: #333;
+  margin: 3px 0;
+}
+
+.chooseUsBtn {
+  display: flex;
+}
+
+
+
+@media only screen and (max-width: 430px) {
+  .bannerContent>div:nth-child(2) ul {
+    z-index: 9999;
+  }
+
+  .bannerContent {
+    position: relative;
+  }
+
+  .bannerContent::after {
+    content: "";
+    background-color: #0009;
+    position: absolute;
+    inset: 0;
+
+  }
+  footer .footerNav{
+    margin: 0;
+    padding: 0;
+  }
+
+  #homeBanner .container>img:nth-child(1) {
+    z-index: -1;
+    object-position: right top;
+    width: 100%;
+  }
+
+  #homeBanner .container::after {
+    background-image: none;
+  }
+
+  .bannerContent>div:nth-child(2) ul li:nth-child(2) {
+    margin-left: 87px;
+    white-space: nowrap;
+  }
+
+  .bannerContent>div:nth-child(2) ul li:nth-child(1) {
+    margin-left: 83px;
+    white-space: nowrap;
+  }
+
+  .bannerContent>div:nth-child(2) ul li:nth-child(3) {
+    margin-left: 83px;
+    white-space: nowrap;
+  }
+
+  .bannerContent>div:nth-child(2) ul li:nth-child(5) {
+    margin-left: 82px;
+    white-space: nowrap;
+  }
+
+  .bannerContent>div:nth-child(2) ul li:nth-child(6) {
+    margin-left: 78px;
+    white-space: nowrap;
+  }
+
+  .bannerContent>div:nth-child(1) {
+    position: relative;
+    z-index: 9999;
+  }
+
+  .bannerContent>div:nth-child(2) ul li:nth-child(4) {
+    margin-left: 80px;
+    white-space: nowrap;
+  }
+  footer .slider .item img{
+    width: 128% !important;
+    height: 81% !important;
+  }
+  footer .slider .item{
+    border: none;
+    height: 178px;
+  }
+  footer .londonBranch{
+    min-height: 100vh;
+  }
+  footer .footerNav{
+    height: 8vh;
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  .bannerContent>div:nth-child(2) ul li:nth-child(1) {
+    margin-left: 35px;
+    white-space: nowrap;
+  }
+
+  .bannerContent>div:nth-child(2) ul li:nth-child(2) {
+    margin-left: 39px;
+    white-space: nowrap;
+  }
+
+  .bannerContent>div:nth-child(2) ul li:nth-child(3) {
+    margin-left: 37px;
+    white-space: nowrap;
+  }
+
+  .bannerContent>div:nth-child(2) ul li:nth-child(4) {
+    margin-left: 37px;
+    white-space: nowrap;
+  }
+
+  .bannerContent>div:nth-child(2) ul li:nth-child(5) {
+    margin-left: 39px;
+    white-space: nowrap;
+  }
+
+  .bannerContent>div:nth-child(2) ul li:nth-child(6) {
+    margin-left: 34px;
+    white-space: nowrap;
+  }
+}
+
+@media only screen and (max-width: 370px) {
+
+  .bannerContent>div:nth-child(2) ul,
+  .bannerContent>div:nth-child(2) ul li i {
+    font-size: 16px;
+  }
+}
+
+@media only screen and (max-width: 280px) {
+
+  .bannerContent>div:nth-child(2) ul,
+  .bannerContent>div:nth-child(2) ul li i {
+    font-size: 13px;
+  }
+}
