--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -18,6 +18,7 @@
 html{
   font-size: 1vw;
   scroll-behavior: smooth;
+  overflow-x: hidden !important;
 }
 
 body {
@@ -25,6 +26,7 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: #d9d9d9;
   font-size: 1rem;
+  overflow-x: hidden;
 }
 
 ul {
