--- a/frontend/assets/css/footer.css
+++ b/frontend/assets/css/footer.css
@@ -76,6 +76,7 @@ footer .formDetail form>.btn {
   margin-left: auto;
   font-family: "Kreon", serif;
   text-align: end;
+  padding: 10px;
   color: white;
   background-image: url("https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63b7fd84e4a16197ede760ff_DBM%20Button.svg");
   background-repeat: no-repeat;
@@ -283,6 +284,11 @@ footer .map img {
 @media only screen and (max-width: 430px) {
   footer .londonBranch{
     min-height:80vh;
+  }
+
+  footer .formDetail form>.btn {
+    width: 70%;
+    font-size: 18px;
   }
 }
 
