--- a/frontend/assets/css/home.css
+++ b/frontend/assets/css/home.css
@@ -595,18 +595,7 @@ footer {
   }
 }
 
-.menu-icon {
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
-}
 
-.bar {
-  width: 25px;
-  height: 3px;
-  background-color: #333;
-  margin: 3px 0;
-}
 
 .chooseUsBtn {
   display: flex;
@@ -692,6 +681,10 @@ footer {
   }
   footer .footerNav{
     height: 8vh;
+  }
+
+  .quoteForm form .group-form button {
+    padding: 10px;
   }
 }
 
