--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -69,6 +69,22 @@ p{
 
 /* *********** Template ************* */
 
+
+
+
+.menu-icon {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: #333;
+  margin: 3px 0;
+}
+
 /* *********** Banner ************* */
 
 .innerBanner{
@@ -125,5 +141,12 @@ p{
   html {
     font-size: 62.5%;
     scroll-behavior: smooth;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .innerBanner p {
+    color: #fff;
+    font-size: 16px;
   }
 }
