--- a/frontend/assets/css/Service.css
+++ b/frontend/assets/css/Service.css
@@ -25,11 +25,11 @@
 }
 
 .services_page .service_sec .box.box1 {
-  background-image: url("../Images/service1.png");
+  background-image: url("../Images/service1.jpg");
 }
 
 .services_page .service_sec .box.box2 {
-  background-image: url("../Images/service2.png");
+  background-image: url("../Images/service2.jpg");
 }
 
 .services_page .service_sec .box h3 {
